# metalink-downloader

./: Cargo.toml  LICENSE  README.md
.cargo-husky/hooks/: commit-msg  pre-commit
.github/workflows/: ci.yaml
iana-registry-enums/: Cargo.toml
iana-registry-enums/src/: error.rs  hash_function_textual_names.rs  lib.rs  operating_system_names.rs
metalink/: Cargo.toml
metalink-downloader/: Cargo.toml
metalink-downloader/src/: cli.rs  error.rs  http.rs  lib.rs  main.rs  types.rs  utils.rs
metalink-downloader/src/commands/: download_file.rs  download_metalink.rs  mod.rs  plan.rs
metalink/examples/: example.metalink  load_from_file.rs
metalink/src/: error.rs  lib.rs  utils.rs
metalink/src/models/: copyright.rs  description.rs  file.rs  file_url.rs  hash.rs  identity.rs  language.rs  logo.rs  meta_url.rs  metalink.rs  mod.rs  origin.rs  os.rs  pieces.rs  publisher.rs  signature.rs  size.rs  torrent_or_mime.rs  version.rs
