[package]
name = "iana-registry-enums"
version = "0.1.0"
edition = "2021"
description = "Provides for enum definitions for iana-registry types."
license = "MIT"
repository = "https://github.com/engelphi/metalink-downloader"
readme = "README.md"
keywords = ["iana-registry", "deserialization", "serialization"]
categories = ["parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
once_cell = "1"
