[package]
name = "metalink-downloader"
version = "0.1.0"
edition = "2021"
description = "Small download utility for downloading based on Metalink (RFC5854) files"
license = "MIT"
repository = "https://github.com/engelphi/metalink-downloader"
readme = "README.md"
keywords = ["metalink", "download", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metalink = { path = "../metalink" }
iana-registry-enums = { path = "../iana-registry-enums" }

# CLI
clap = { version = "4", features = ["derive"] }

# http 
reqwest = { version = "0.12", features = ["http2", "gzip", "stream", "native-tls-alpn", "zstd"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
url = { version = "2.5", features = ["serde"] }
futures = "0.3"
async-channel = "2.3.1"

# error handling
anyhow = "1"
thiserror = "1"
miette = { version = "7", features = ["fancy"] }

# utilities
bytes = "1"

# checksum
digest = "0.10"
md2 = "0.10"
md-5 = "0.10"
sha1-checked = "0.10"
sha2 = "0.10"

#tracing/logging
log = "0.4"
log4rs = "1"

indicatif = "0.17"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
