[package]
name = "metalink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iana-registry-enums = { path = "../iana-registry-enums" }
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
url = { version = "2.5", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
mime = "0.3"
serde_with = "3"
thiserror = "1"
color-eyre = "0.6"
isocountry = "0.3"
